# My-rag-chat-bot-with-deepseek

./: .env.example  .gitignore  README.md  new_requirements.txt  pyproject.toml  requirements.txt
rag_app/: __init__.py  app.py  config.py  loaders.py  rag_chain.py  utils.py
